--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,8 @@ jobs:
         os: [windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Show ENVs before
-        run: set
+      # - name: Show ENVs before
+      #   run: set
       - name: Go version before
         run: go version
       - uses: actions/checkout@v4
@@ -18,5 +18,5 @@ jobs:
           version: ${{ matrix.go-version }}
       - name: Go version after
         run: go version
-      - name: Show ENVs after
-        run: set
+      # - name: Show ENVs after
+      #   run: set
