--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       # - name: Show ENVs before
       #   run: set
-      - run: echo "$PATH"
+      - run: echo "$env:PATH"
       - name: Go version before
         run: go version
       - uses: actions/checkout@v4
@@ -21,7 +21,7 @@ jobs:
           version: ${{ matrix.go-version }}
       - name: Go version after
         run: go version
-      - run: echo "$PATH"
+      - run: echo "$env:PATH"
       # - name: Show ENVs after
       #   run: set
       #####
@@ -38,4 +38,4 @@ jobs:
       # 
       - name: Go version after
         run: go version
-      - run: echo "$PATH"
+      - run: echo "$env:PATH"
