feat: use cmd for windows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,11 +31,12 @@ jobs:
           echo "$HOME/.gobrew/bin"  >> $env:GITHUB_PATH
           echo "$HOME/go/bin"  >> $env:GITHUB_PATH
           curl -sLk https://raw.githubusercontent.com/kevincobain2000/gobrew/master/git.io.sh | sh
-        shell: bash
+        shell: cmd
       - name: gobrew use
         run: gobrew use latest
-        shell: bash
+        shell: cmd
       # 
       - name: Go version after
         run: go version
+        shell: cmd
       - run: echo "$env:PATH"
