feat: change shell to pwsh

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,12 +31,12 @@ jobs:
           echo "$HOME/.gobrew/bin"  >> $env:GITHUB_PATH
           echo "$HOME/go/bin"  >> $env:GITHUB_PATH
           curl -sLk https://raw.githubusercontent.com/kevincobain2000/gobrew/master/git.io.sh | sh
-        shell: cmd
+        shell: pwsh
       - name: gobrew use
         run: gobrew use latest
-        shell: cmd
+        shell: pwsh
       # 
       - name: Go version after
         run: go version
-        shell: cmd
+        shell: pwsh
       - run: echo "$env:PATH"
