--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,33 +7,37 @@ jobs:
     strategy:
       matrix:
         go-version: [latest]
-        os: [windows-latest]
+        os: [ubuntu-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      # - name: Show ENVs before
-      #   run: set
-      - run: echo "$env:PATH"
+      - run: echo "$PATH"
       - name: Go version before
         run: go version
       - uses: actions/checkout@v4
-      - uses: kevincobain2000/action-gobrew@v2
-        with:
-          version: ${{ matrix.go-version }}
-      - name: Go version after
-        run: go version
-      - run: echo "$env:PATH"
+      # - uses: kevincobain2000/action-gobrew@v2
+      #   with:
+      #     version: ${{ matrix.go-version }}
+      # - name: Go version after
+      #   run: go version
+      - run: echo "$PATH"
         shell: bash
-      # - name: Show ENVs after
-      #   run: set
       #####
       - name: gobrew setup
         run: |
-          echo "$HOME\.gobrew\current\bin" >> $env:GITHUB_PATH
-          echo "$HOME\.gobrew\bin"  >> $env:GITHUB_PATH
-          echo "$HOME\go\bin"  >> $env:GITHUB_PATH
+          if [ "$RUNNER_OS" == "Linux" ]; then
+            echo "$HOME/.gobrew/current/bin" >> $GITHUB_PATH
+            echo "$HOME/.gobrew/bin"  >> $GITHUB_PATH
+            echo "$HOME/go/bin"  >> $GITHUB_PATH
+          elif [ "$RUNNER_OS" == "Windows" ]; then
+            echo "$HOME\.gobrew\current\bin" >> $env:GITHUB_PATH
+            echo "$HOME\.gobrew\bin"  >> $env:GITHUB_PATH
+            echo "$HOME\go\bin"  >> $env:GITHUB_PATH
+          fi
           curl -sLk https://raw.githubusercontent.com/kevincobain2000/gobrew/master/git.io.sh | sh
+        shell: bash
       - name: gobrew use
         run: gobrew use latest
+        shell: bash
       # 
       - name: Go version after
         run: go version
