--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
       - run: echo "$PATH"
       - name: Go version before
         run: go version
+        shell: bash
       - uses: actions/checkout@v4
       # - uses: kevincobain2000/action-gobrew@v2
       #   with:
@@ -24,15 +25,9 @@ jobs:
       #####
       - name: gobrew setup
         run: |
-          if [ "$RUNNER_OS" == "Linux" ]; then
-            echo "$HOME/.gobrew/current/bin" >> $GITHUB_PATH
-            echo "$HOME/.gobrew/bin"  >> $GITHUB_PATH
-            echo "$HOME/go/bin"  >> $GITHUB_PATH
-          elif [ "$RUNNER_OS" == "Windows" ]; then
-            echo "$HOME\.gobrew\current\bin" >> $env:GITHUB_PATH
-            echo "$HOME\.gobrew\bin"  >> $env:GITHUB_PATH
-            echo "$HOME\go\bin"  >> $env:GITHUB_PATH
-          fi
+          echo "$HOME/.gobrew/current/bin" >> $GITHUB_PATH
+          echo "$HOME/.gobrew/bin"  >> $GITHUB_PATH
+          echo "$HOME/go/bin"  >> $GITHUB_PATH
           curl -sLk https://raw.githubusercontent.com/kevincobain2000/gobrew/master/git.io.sh | sh
         shell: bash
       - name: gobrew use
